--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,12 @@
             "role": "Developer"
         }
     ],
+    "require-dev": {
+        "phpunit/phpunit": "~4.3"
+    },
     "autoload": {
-        "psr-0": {
-            "HTMLValidator": "src/"
+        "psr-4": {
+            "HTMLValidator\\": "src/HTMLValidator"
         }
     }
 }
