--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "gemorroj/htmlvalidator",
     "type": "library",
     "description": "W3C HTML Validator service.",
-    "license": "BSD",
+    "license": "LGPL-3.0",
     "require": {
         "php": ">=5.3.0"
     },
@@ -13,7 +13,7 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "~4.8"
+        "phpunit/phpunit": "~4.8|~5.0"
     },
     "autoload": {
         "psr-4": {
