--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ php:
   - 5.3
 
 before_script:
-  - composer self-update && composer install --dev --prefer-source --no-interaction
+  - composer self-update && composer install --no-interaction
 
-script: phpunit --configuration phpunit.xml
+script: vendor/bin/phpunit --configuration phpunit.xml
 
 notifications:
   email: false
