--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,9 @@ php:
   - 5.4
   - 5.3
 
-matrix:
-  include:
-    - php: hhvm
-      dist: trusty
-
 before_script:
-  - composer self-update && composer install --no-interaction
+  - composer self-update
+  - composer install --no-interaction
 
 script: vendor/bin/phpunit --configuration phpunit.xml
 
