--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "LGPL-3.0",
     "require": {
         "php": ">=7.3",
-        "ext-dom": "*"
+        "ext-json": "*"
     },
     "authors": [
         {
