--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "LGPL-3.0",
     "require": {
         "php": ">=7.3",
-        "ext-json": "*"
+        "symfony/http-client": "^4.4.11|^5.0"
     },
     "authors": [
         {
