--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "gemorroj/htmlvalidator",
     "type": "library",
     "description": "W3C HTML Validator service.",
-    "license": "LGPL-3.0",
+    "license": "LGPL-3.0-or-later",
     "require": {
         "php": ">=7.3",
         "symfony/http-client": "^4.4.11|^5.0"
