--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "description": "W3C HTML Validator service.",
     "license": "LGPL-3.0-or-later",
     "require": {
-        "php": ">=7.4",
-        "symfony/http-client": "^4.4.11||^5.0||^6.0"
+        "php": ">=8.0.2",
+        "symfony/http-client": "^5.4||^6.0"
     },
     "authors": [
         {
@@ -13,7 +13,7 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^9.5.16",
+        "phpunit/phpunit": "^9.6",
         "friendsofphp/php-cs-fixer": "^3.0"
     },
     "autoload": {
